--- a/LibraRim/app/src/main/AndroidManifest.xml
+++ b/LibraRim/app/src/main/AndroidManifest.xml
@@ -35,6 +35,12 @@
             android:name=".SettingsActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".ServiceInfoActivity">
+            <intent-filter>
+                <action android:name="android.provider.Settings.ACTION_LOCATION_SOURCE_SETTINGS"/>
+                <category android:name="android.intent.category.DEFAULT"> </category>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
