--- a/LibraRim/app/src/main/AndroidManifest.xml
+++ b/LibraRim/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:largeHeap ="true"
         >
         <activity
             android:name=".SplashActivity"
